type place
